--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -52,7 +52,7 @@
       <!--tabla: contiene el listado de elementos-->
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
 
-      <!-- Agregar las pestañas --> 
+      <!-- Agregar las pestañas -->
       <md-tabs md-dynamic-height md-border-bottom>
       <md-tab label="CURSOS APERTURADOS">
         <md-content class="md-padding">
@@ -102,17 +102,17 @@
         </div>
 
        </md-content>
-    </md-tab> 
+    </md-tab>
     <!-- segunda pestaña-->
     <md-tab label="GRUPOS APERTURADOS">
         <md-content class="md-padding">
-          
+
         <!-- CONTENIDO -->
-        
-<div class="table-responsive">
-          <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
+
+<!-- <div class="table-responsive">
+          <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered "> -->
             <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-            <tbody ng-repeat="group in $groups">
+            <!-- <tbody ng-repeat="group in $groups">
               <tr class="ng-table-group">
                 <td colspan="2">
                   <a href class="groupTitle" ng-click="group.$hideRows = !group.$hideRows">
@@ -151,7 +151,7 @@
             </tbody>
             <tbody>
           </table>
-        </div>
+        </div> -->
         <!-- FIN DE CONTENIDO -->
 
 
@@ -167,4 +167,3 @@
   <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
   <md-icon md-font-icon="fa fa-plus fa-lg tc-white"></md-icon>
 </md-button>
-
