Actualización de Creación de Grupos

--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -52,7 +52,6 @@
       <!--tabla: contiene el listado de elementos-->
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
 
-
       <!-- Agregar las pestañas -->
       <md-tabs md-dynamic-height md-border-bottom>
       <md-tab label="CURSOS APERTURADOS">
@@ -112,10 +111,10 @@
 
         <!-- CONTENIDO -->
 
-<div class="table-responsive">
-          <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
+<!-- <div class="table-responsive">
+          <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered "> -->
             <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-            <tbody ng-repeat="group in $groups">
+            <!-- <tbody ng-repeat="group in $groups">
               <tr class="ng-table-group">
                 <td colspan="2">
                   <a href class="groupTitle" ng-click="group.$hideRows = !group.$hideRows">
@@ -155,7 +154,7 @@
             <tbody>
           </table>
 
-        </div>
+        </div> -->
         <!-- FIN DE CONTENIDO -->
 
 
