--- a/client/app/views/ingresantes/form.html
+++ b/client/app/views/ingresantes/form.html
@@ -18,7 +18,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Nombres</label>
-                <input required name="nombres" ng-model="model.nombres" required>
+                <input required name="nombres" ng-model="model._persona.nombres" required>
                 <div ng-messages="myForm.nombres.$error" ng-if="submited">
                   <div ng-message="required">{{message.Required}}</div>
                 </div>
@@ -27,7 +27,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Apellido Paterno</label>
-                <input required name="apellidoPaterno" ng-model="model.apellidoPaterno" required>
+                <input required name="apellidoPaterno" ng-model="model._persona.apellidoPaterno" required>
                 <div ng-messages="myForm.apellidoPaterno.$error" ng-if="submited">
                   <div ng-message="required">{{message.Required}}</div>
                 </div>
@@ -36,7 +36,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Apellido Materno</label>
-                <input required name="apellidoMaterno" ng-model="model.apellidoMaterno" required>
+                <input required name="apellidoMaterno" ng-model="model._persona.apellidoMaterno" required>
                 <div ng-messages="myForm.apellidoMaterno.$error" ng-if="submited">
                   <div ng-message="required">{{message.Required}}</div>
                 </div>
@@ -48,7 +48,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Tipo de Documento</label>
-                <md-select ng-model="model.documentoIdentidad.tipo" name="tipo" required>
+                <md-select ng-model="model._persona.documentoIdentidad.tipo" name="tipo" required>
                   <md-option ng-repeat="td in tipodocumento" ng-value="td">
                     {{td}}
                   </md-option>
@@ -61,7 +61,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Documento</label>
-                <input required name="numero" ng-model="model.documentoIdentidad.numero" required>
+                <input required name="numero" ng-model="model._persona.documentoIdentidad.numero" required>
                 <div ng-messages="myForm.numero.$error" ng-if="submited">
                   <div ng-message="required">{{message.Required}}</div>
                 </div>
@@ -70,7 +70,7 @@
             <div flex-item>
               <md-input-container class="md-block">
                 <label>Sexo</label>
-                <md-select ng-model="model.sexo" name="sexo" required>
+                <md-select ng-model="model._persona.sexo" name="sexo" required>
                   <md-option ng-repeat="sex in sexo" ng-value="sex">
                     {{sex}}
                   </md-option>
