--- a/client/app/views/docentes/list.html
+++ b/client/app/views/docentes/list.html
@@ -18,6 +18,8 @@
             <td class="text-left" data-title="'Nombres'" sortable="nombres" filter="{'nombres':'text'}">{{item.nombres}}</td>
             <td class="text-left" data-title="'Apellidos'" sortable="apellidos" filter="{'apellidos':'text'}">{{item.apellidos}}</td>
             <td class="text-left" data-title="'Facultad'" sortable="facultad" filter="{'facultad':'text'}">{{item._facultad.nombre}}</td>
+            <td class="text-left" data-title="'Condición'" sortable="condicion" filter="{'condicion':'text'}">{{item.condicion}}</td>
+            <td class="text-left" data-title="'Categoria'" sortable="categotia" filter="{'categotia':'text'}">{{item.categoria}}</td>
           </tr>
         </tbody>
       </table>
