Lista de cursosaprobadosporperiodo

--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -51,12 +51,7 @@
 
       <!--tabla: contiene el listado de elementos-->
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
-
-<<<<<<< HEAD
       <!-- Agregar las pestañas -->
-=======
-      <!-- Agregar las pestañas -->
->>>>>>> 21a580a00c0cd8483897b86cd8750e8124712076
       <md-tabs md-dynamic-height md-border-bottom>
       <md-tab label="CURSOS APERTURADOS">
         <md-content class="md-padding">
@@ -82,7 +77,9 @@
                 <td style="width:30px;">
                   <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
                 </td>
-                <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td>
+
+                <!-- <td class="text-left" data-title="'Curso'" sortable="curso">{{item._curso.nombre}}</td> -->
+                <td class="text-left" data-title="'Curso'" sortable="curso">{{item._id}}</td>
                 <td data-title="'Código'" sortable="codigo" filter="{ 'codigo': 'text' }">{{item._curso.codigo}}</td>
                 <td data-title="'N° Creditos'">{{item.creditos}}</td>
                 <td data-title="'N° Horas'">{{item.horas_total}}</td>
