Mantenimiento Secciones - Arreglo de formulario

--- a/client/app/views/secciones/form.html
+++ b/client/app/views/secciones/form.html
@@ -33,6 +33,8 @@
             </div>
           </md-input-container>
         </div>
+      </div>
+      <div flex layout="row" layout-sm="row">
         <div flex-item>
           <md-input-container class="md-block">
             <label>Facultad</label>
